Checked items in mobile
Checked items in mobile drop to bottom
Unchecked items in rise to last unchecked position (don't just stay in
their same place)

Started to work on enter press to login

--- a/public/css/shopmaster.css
+++ b/public/css/shopmaster.css
@@ -265,3 +265,7 @@ body {
 #sm-quick-add-form {
      margin-top: 16px;  
 }
+.smitemdisabled {
+    background-color: #C4C4C4 !important;
+    color: #808080 !important;
+}
