--- a/public/templates/mobile.html
+++ b/public/templates/mobile.html
@@ -72,8 +72,7 @@
 
 </div>
 <div id="sm-footer">
-    {{projectedTime}}
-    {{numItems}}
+    {{projectedTime}} <span style="color: #86B8E0; font-size: 11pt;">mins left, </span>{{numItems}} <span style="color: #86B8E0; font-size: 11pt;">items left</span>
     <form id="sm-quick-add-form" role="form" name="quickAddForm" novalidate>
             
             <div class="col-xs-9">
