--- a/public/templates/mobile.html
+++ b/public/templates/mobile.html
@@ -82,6 +82,7 @@
                     class="form-control"
                     id="sm-quick-add-item-text-entry" 
                     placeholder="Quick add an item..."
+                    autocomplete="off"
                     required>
             </div>
 
