--- a/public/templates/mobile.html
+++ b/public/templates/mobile.html
@@ -86,7 +86,7 @@
                     required>
             </div>
 
-            <div class="col-xs-3">
+            <div class="col-xs-3" style="margin-left:-15px;">
                 <button type="button" 
                         class="btn btn-info"
                         ng-click="quickAddItem()"
