Changed some of the wording to make more sense to the user

--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -108,7 +108,7 @@
                 ng-click="sendToPhone()" 
                 ng-disabled="disableSendToPhone || items.length < 1"
                 style="margin-right:15px;">
-            Send to Phone <span class="glyphicon glyphicon-send"></span>
+            Send to Cloud <span class="glyphicon glyphicon-send"></span>
         </button>
     </div>
     
